Fixed viewport height issue on mobile

--- a/styles/_index.scss
+++ b/styles/_index.scss
@@ -2,7 +2,7 @@
 .overlay,
 .blurOverlay {
   object-fit: cover;
-  height: 100%;
+  height: calc(var(--vh, 1vh) * 100);
   position: absolute;
   width: 100%;
 }
